<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Wami</string>
	<string name="activity_name">My Wami</string>

	<string name="email_address">Enter destination Email Address</string>
	<string name="profile_name">Enter destination Profile Name</string>
	<string name="wami_group">Enter Group name</string>
	<string name="dialog_transmit_wami_text">Transmit Wami By</string>
	<string name="transmit">Transmit</string>
	<string name="cancel">Cancel</string>

	<!--Menu Strings-->
	<string name="action_select_profile_collection">Select a Profile Collection…</string>
    <string name="action_filter_collection">Filter Collection by Group...</string>
	<string name="action_transmit_wamis">Publish Profile(s)…</string>
	<string name="action_refresh_wami_list">Refresh Wami List</string>
	<string name="action_search_for_profiles">Search for Profiles…</string>
	<string name="action_group_wami">Set Up Wami Groups…</string>
	<string name="action_logout">Logout</string>

	<string name="action_new_flash">New Flash Announcement…</string>
	<string name="action_transmit_this_wami">Publish This Profile…</string>
	<string name="action_add_to_contact_list">Add To Contact List…</string>
	<string name="action_home">Home</string>

	<string name="action_remove_wami">Remove Wami(s)</string>
	<string name="action_request_wami">Request a Wami Profile</string>
	<string name="action_settings">Settings</string>
	<string name="action_transmit_wami">Publish My Profile</string>
	<string name="action_create_flash">Create new flash</string>
	<string name="action_filter">Filter Wami List</string>

	<string name="search_str">Search String</string>
	<string name="search_in">Search In</string>
	<string name="search_within">Search Within</string>
	<string name="new_flash">New flash up to 110 characters</string>
	<string name="action_navigate_to">Navigate To...</string>

	<string name="account_first_name">First Name</string>
	<string name="account_last_name">Last Name</string>
	<string name="account_email_address">Email Address</string>
	<string name="account_username">Account Username</string>
	<string name="account_password">Password</string>
	<string name="account_retype_password">Retype Password</string>
	<string name="account_first_profile_name">First Profile Name</string>
	<string name="account_tele_number">Tele Number</string>
	<string name="account_profile_description">Profile Description</string>
</resources>
