<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.MyWami.WamiListActivity" >

	<item android:id="@+id/action_select_profile"
	      android:title="@string/action_select_profile_collection"/>

	<item android:id="@+id/action_filter_collection"
		android:title="@string/action_filter_collection"/>

	<item android:id="@+id/action_transmit_wami"
	      android:title="@string/action_transmit_wamis"/>

	<item android:id="@+id/action_refresh_wami_list"
	      android:title="@string/action_refresh_wami_list"/>

	<item android:id="@+id/action_search_for_profiles"
	      android:icon="@drawable/ic_action_search"
	      android:title="@string/action_search_for_profiles"/>

	<item android:id="@+id/action_logout"
	      android:title="@string/action_logout"/>
</menu>
